# frills

./: frills.cabal  stack.yaml
lib/Control/Wire/: Frills.hs
